--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.gms.google-services'
 }
 
 android {
@@ -13,6 +12,8 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+
+        manifestPlaceholders = [redirectSchemeName: "com.example.rawspotify", redirectHostName: "auth"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -30,6 +31,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.spotify.android:auth:2.1.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
@@ -37,8 +40,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    implementation 'com.spotify.android:auth:2.1.1'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
-    implementation platform('com.google.firebase:firebase-bom:32.8.0')
-    implementation 'com.google.firebase:firebase-analytics'
 }
