--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
@@ -12,6 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SpotifyWrapped"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -22,7 +24,7 @@
             </intent-filter>
 
             <intent-filter>
-                <data android:host="auth" android:scheme="spotify-sdk"/>
+                <data android:host="auth" android:scheme="com.example.rawspotify"/>
             </intent-filter>
 
         </activity>
